2007-01-27  Mike Sperber  <mike@xemacs.org>

	* faces.c (complex_vars_of_faces): Move declarations of fontptr
	and fonts out of #ifdef MULE, unbreaking the non-MULE Xft build.

2007-01-20  Aidan Kehoe  <kehoea@parhasard.net>

	* eval.c:
	Document in more detail what happens with byte-compilation,
	`function', and `quote'. 
	* fns.c:
	Mention that `require' is evaluated both at byte-compile time and
	at runtime. 

2007-01-06  Vin Shelton  <acs@xemacs.org>

	* fileio.c (check_writable): Check old-style readonly bit first.

2006-12-21  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c:
	Update the make-coding-system docstring to reflect unicode-type
	* general-slots.h:
	New symbol, unicode-type, since 'type was being overridden when
	accessing a coding system's Unicode subtype. 
	* intl-win32.c:
	Backslash a few parentheses, to help fontification along. 
	* intl-win32.c (complex_vars_of_intl_win32):
	Use the 'unicode-type symbol, not 'type, when creating the
	Microsoft Unicode coding system. 
	* unicode.c (unicode_putprop):
	* unicode.c (unicode_getprop):
	* unicode.c (unicode_print):
	Using 'type as the property name when working out what Unicode
	subtype a given coding system is was broken, since there's a
	general coding system property called 'type. Change the former to
	use 'unicode-type instead. 

2006-12-27  Malcolm Purvis  <malcolmp@xemacs.org>

	* s/linux.h: Enable SYSTEM_MALLOC on ppc64, alpha and ia64
	systems.

2006-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.c (complex_vars_of_faces):
	Don't use server-side fallbacks when building with XFT support. 

2006-12-06  Dr. Volker Zell  <Dr.Volker.Zell@oracle.com>

	* config.h.in: New HAVE_U_INT*_T defines.
	* database.c: Only use u_int*_t typedefs if not already
	defined.

2006-12-08  Aidan Kehoe  <kehoea@parhasard.net> 
 
	* specifier.c (charset_matches_specifier_tag_set_p): 
	A charset's entry in Vcharset_tag_lists may be nil, if, when that 