@@ -1,3 +1,8 @@
+2007-02-05  Mike Sperber  <mike@xemacs.org>
+
+	* fileio.c (Finsert_file_contents_internal): Clean up dead
+	`handler' variable.
+
 2007-01-27  Mike Sperber  <mike@xemacs.org>
 
 	* faces.c (complex_vars_of_faces): Move declarations of fontptr
